--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,8 @@ h1 {
 }
 
 button{
-    width:175px;
+    min-width: 175px;
+    padding: 10px 15px;
     font-size: 35px;
     height: 70px;
     color: #fff;
@@ -75,6 +76,12 @@ button{
     border-radius: 10px;
     margin-left: 20px;
     margin-top: 90px;
+    white-space: nowrap;
+}
+
+button:disabled {
+    background-color: rgb(142, 142, 253);
+    cursor: not-allowed;
 }
 
 @media (min-width: 667px) and (max-width: 1024px){
